# node-fontinfo

./: CMakeLists.txt
src/fontinfo/: fontinfo.c
